--- a/.golangci.yml
+++ b/.golangci.yml
@@ -2,41 +2,30 @@
 run:
   # 要使用的CPU核心数
   concurrency: 4
-
-  # 分析超时，例如 30s, 5m，默认是 1m
-  timeout: 5m
-
-  # 包管理模式，go modules使用readonly
-  # 可用的值范围 readonly|release|vendor
-  modules-download-mode: readonly
-
-  # 当有多少个问题存在时则退出检查，默认是1
-  issues-exit-code: 10
-
-  # 是否包含测试文件
+  # 分析超时，30m, 5m, 默认1m
+  timeout: 1m
+  # 退出代码, default is 1
+  issues-exit-code: 1
+  # 是否包含单元测试文件, default is true
   tests: true
-
-  # 要跳过检查的目录
-  skip-dirs:
-    - bin
-    - vendor
-
-  # 允许跳过目录
+  # 跳过目录
+  # skip-dirs:
+  #     - vendor
+  # 跳过默认目录：vendor$, third_party$, testdata$, examples$, Godeps$, builtin$
   skip-dirs-use-default: true
-
-  # 跳过文件
-  skip-files:
+  # 包管理模式，go modules使用readonly
+  modules-download-mode: readonly
 
 # 输出配置
 output:
-  # colored-line-number|line-number|json|tab|checkstyle|code-climate, default is "colored-line-number"
+  # 输出格式：colored-line-number|line-number|json|tab|checkstyle|code-climate, default is "colored-line-number"
   format: colored-line-number
-
-  # 打印行号
+  # 打印有问题的代码行号, default is true
   print-issued-lines: true
-
-  # 打印检查器的名称
+  # 在问题文本的未尾打印检查器名称, default is true
   print-linter-name: true
+  # 使问题的输出逐行唯一, default is true
+  uniq-by-line: true
 
 # 质量检查配置
 linters-settings:
@@ -51,70 +40,24 @@ linters-settings:
     # 忽略文件
     ignore: fmt:.*,io/ioutil:^Read.*
 
-  funlen:
-    lines: 60
-    statements: 40
-
+  maligned:
+    suggest-new: true
   govet:
-    # 检查影子变量
-    check-shadowing: true
-    # 根氟名称启用或禁用分析器
-    enable:
-#      - atomicalign
-    enable-all: false
-    disable:
-#      - shadow
-    disable-all: false
-
-  golint:
-    # minimal confidence for issues, default is 0.8
-    min-confidence: 0.8
+    enable-all: true
+    printing-suggested-fixes: true
 
   # 检查函数的复杂程度
   gocyclo:
     # 最小复杂性
-    min-complexity: 35
-
-  gocognit:
-    # 最小复杂性
-    min-complexity: 35
-
-  maligned:
-    # 为内存对齐优化给出新的结构体字段排序建议
-    suggest-new: true
-    # 自动修复
-    auto-fix: true
-
-  dupl:
-    # tokens count to trigger issue, 150 by default
-    threshold: 100
-
-  goconst:
-    # minimal length of string constant, 3 by default
-    min-len: 3
-    # minimal occurrences count to trigger, 3 by default
-    min-occurrences: 3
-
+    min-complexity: 10
   depguard:
     list-type: blacklist
     include-go-root: false
-
+    packages:
+      - github.com/davecgh/go-spew/spew
   lll:
-    line-length: 240
+    line-length: 120
     tab-width: 1
-
-  misspell:
-    # Correct spellings using locale preferences for US or UK.
-    # Default is to use a neutral variety of English.
-    # Setting locale to US will correct the British spelling of 'colour' to 'color'.
-    locale: US
-    ignore-words:
-      - someword
-
-  nakedret:
-    # 如果func的代码行数比这个设置的多，并且它的返回值是空的，就会产生问题，默认是30
-    max-func-lines: 30
-
   unused:
     check-exported: true
   unparam:
@@ -136,52 +79,55 @@ linters:
     - deadcode
     - depguard
     - dogsled
+    - dupl
     - errcheck
+    - exportloopref
+    - exhaustive
     - gochecknoinits
     - goconst
     - gocritic
-    - gocyclo
     - gofmt
+    - govet
     - goimports
+    - golint
+    - goprintffuncname
     - gosec
     - gosimple
-    - govet
     - ineffassign
-    - interfacer
+    - lll
+    - maligned
     - misspell
-    - scopelint
+    - noctx
+    - nolintlint
+    - rowserrcheck
     - staticcheck
+    - structcheck
+    - stylecheck
     - typecheck
     - unconvert
     - unparam
+    - unused
     - varcheck
-    - godox
-    - structcheck
-    - maligned
+    - whitespace
   enable-all: false
   disable:
-    - unused
-    - stylecheck
+    - scopelint
     - funlen
-    - whitespace
-    - dupl
-    - golint
-    - lll
-    - wsl
+    - gocyclo
     - nakedret
-    - gochecknoglobals
+    - gomnd
   disable-all: false
   presets:
     - bugs
   fast: false
 
 issues:
-  new: false
   exclude: /bin
   exclude-rules:
     # 设置某个目录的排除规则
     - path: _test\.go
       linters:
+        - gomnd
         - gocyclo
         - errcheck
         - dupl
@@ -192,15 +138,60 @@ issues:
       linters:
         - gosec
 
-    # 排序一些staticcheck消息
+    # 排除staticcheck消息
+    - linters:
+        - staticcheck
+      text: "SA6002:"
     - linters:
         - staticcheck
       text: "SA9003:"
 
-    # Exclude lll issues for long lines with go:generate
+    # 排除gosec消息
+    - linters:
+        - gosec
+      text: "G103:"
+
+    # 排除golint的导出未注释的消息
+    - linters:
+        - golint
+      text: "comment on exported"
+    # 排除golint的导出未注释的消息
+    - linters:
+        - golint
+      text: "should have comment"
+    - linters:
+        - govet
+      text: "fieldalignment:"
+    # 排除stylecheck的导出未注释的消息
+    - linters:
+        - stylecheck
+      text: "ST1020:"
+    # 排除stylecheck的导出未注释的消息
+    - linters:
+        - stylecheck
+      text: "ST1000:"
+    # 排除stylecheck的导出未注释的消息
+    - linters:
+        - stylecheck
+      text: "ST1021:"
+    # 排除stylecheck的导出未注释的消息
+    - linters:
+        - stylecheck
+      text: "ST1022:"
+
+    # 排除lll的行太长的消息
     - linters:
         - lll
-      source: "^//go:generate "
+      text: "line is"
+
+    - linters:
+        - gocritic
+      text: "unnecessaryDefer:"
+
+    # Exclude lll issues for long lines with go:generate
+  #    - linters:
+  #        - lll
+  #      source: "^//go:generate "
 
   # Independently from option `exclude` we use default exclude patterns,
   # it can be disabled by this option. To list all
