--- a/.golangci.yml
+++ b/.golangci.yml
@@ -40,8 +40,6 @@ linters-settings:
     # 忽略文件
     ignore: fmt:.*,io/ioutil:^Read.*
 
-  maligned:
-    suggest-new: true
   govet:
     enable-all: true
     printing-suggested-fixes: true
@@ -50,11 +48,6 @@ linters-settings:
   gocyclo:
     # 最小复杂性
     min-complexity: 10
-  depguard:
-    list-type: blacklist
-    include-go-root: false
-    packages:
-      - github.com/davecgh/go-spew/spew
   lll:
     line-length: 120
     tab-width: 1
@@ -76,7 +69,6 @@ linters-settings:
 linters:
   enable:
     - bodyclose
-    - deadcode
     - depguard
     - dogsled
     - dupl
@@ -89,25 +81,22 @@ linters:
     - gofmt
     - govet
     - goimports
-    - golint
     - goprintffuncname
     - gosec
     - gosimple
     - ineffassign
     - lll
-    - maligned
     - misspell
     - noctx
     - nolintlint
     - rowserrcheck
     - staticcheck
-    - structcheck
     - stylecheck
     - typecheck
     - unconvert
     - unparam
     - unused
-    - varcheck
+    - revive
     - whitespace
   enable-all: false
   disable:
@@ -132,36 +121,30 @@ issues:
         - errcheck
         - dupl
         - gosec
-
     - path: internal/hmac/
       text: "weak cryptographic primitive"
       linters:
         - gosec
-
-    # 排除staticcheck消息
+    - linters:
+        - depguard
+      text: "is not allowed from list 'Main'"
+      # 排除staticcheck消息
+    - linters:
+        - govet
+      text: "fieldalignment"
     - linters:
         - staticcheck
       text: "SA6002:"
     - linters:
+        - revive
+      text: "package-comments: should have a package comment"
+    - linters:
         - staticcheck
       text: "SA9003:"
-
     # 排除gosec消息
     - linters:
         - gosec
       text: "G103:"
-
-    # 排除golint的导出未注释的消息
-    - linters:
-        - golint
-      text: "comment on exported"
-    # 排除golint的导出未注释的消息
-    - linters:
-        - golint
-      text: "should have comment"
-    - linters:
-        - govet
-      text: "fieldalignment:"
     # 排除stylecheck的导出未注释的消息
     - linters:
         - stylecheck
@@ -178,17 +161,18 @@ issues:
     - linters:
         - stylecheck
       text: "ST1022:"
-
     # 排除lll的行太长的消息
     - linters:
         - lll
       text: "line is"
-
     - linters:
         - gocritic
       text: "unnecessaryDefer:"
+    - linters:
+        - gosmopolitan
+      text: "string literal contains rune in Han script"
 
-    # Exclude lll issues for long lines with go:generate
+  # Exclude lll issues for long lines with go:generate
   #    - linters:
   #        - lll
   #      source: "^//go:generate "
